# hwMpi

./: .gitignore  CMakeLists.txt  README.md  eigthTask.cpp  fifthTask.cpp  firstTask.cpp  fouthTask.cpp  ninthTask.cpp  seventhTask.cpp  sixthTask.cpp  tenTask.cpp  thirdTask.cpp
