cmake_minimum_required(VERSION 3.12)
project(untitled0)
project(untitled1)
project(untitled2)
project(untitled3)
project(task5)
project(task6)
project(task7)
project(task8)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_COMPILER /usr/bin/mpic++.openmpi)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY /home/infotech/CLionProjects/untitled1/runtime)

add_executable(untitled0 firstTask.cpp thirdTask.cpp fouthTask.cpp fifthTask.cpp seventhTask.cpp eigthTask.cpp)
add_executable(untitled1 secondTask.cpp)
add_executable(untitled2 thirdTask.cpp)
add_executable(untitled3 fouthTask.cpp)
add_executable(task5 fifthTask.cpp)
add_executable(task6 sixthTask.cpp)
add_executable(task7 seventhTask.cpp)
add_executable(task8 eigthTask.cpp)